Made Changes to the Form Designs, Added new Form, Change Layouts, Added Pictures, Renamed Buttons and More

--- a/FleetTrackingInformationSystem/FleetTrackingInformationSystem/frmLogin.resx
+++ b/FleetTrackingInformationSystem/FleetTrackingInformationSystem/frmLogin.resx
@@ -121,6 +121,212 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="picCargoFleet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsTAAALEwEAmpwYAAAumUlE
+        QVR4Xu2cB1gUZ9S26b2jqEgvgqiAggqoCIpSFJEqYgMrNkTF3hsqiih2RSkKCHYRe43GGmvsiSVRY409
+        Mf35zzuzZbYhmnxJvu/PXte52Jkddmfv88xzznl3QU1DrR601P3+i78oNJXs40KjObQlwbY9oKam/UhN
+        Vz0NBhrrKIr+iz8Zhiw0i2CkWQgjrUIYs9AugIlOAUx18mGmS6G3Fhb6tE93HNTVjf5Q09PIoF/cRLHx
+        v/iIMNIsl4SxFosymGiXEegNBLqUC3O9EoJdAkuDYtQwLEZNo/WwMl6HWibFsDCcBA11I6jpcglgT1r+
+        X1QRPOwyDrSx9gaCvYFg86DNdEtEsItFsNcT7HUi2EWobVqIOmaFsDYvQF2LfNhYFsLKdDw0NP5LgNJg
+        oCWwtaSweeBVw65FsGvLwM6HbY21sKu5BvZWeXCovRpOddbAusYYaP6XADllS2CTjXwAtlW1YOfBsQ4B
+        t14F57or4WqzAvXslsPdfiXs64ykBBj+/5UAWdjMs4U2IvZsVbDJSj4Wtu1yuNkvg7vDMng4LkUD5yVo
+        6LIYnvWWwMUuHVqa/0cTIAatzEaqUnZNOWXXEcGuS7BthLBrMdirJLBdRMpWBruRay683BbB230hGtfP
+        gU+DBWjaKAf1nYdAS+v/SAKU24hY2R/2bFYgGWxrpbBXw5H5djWULYTdxIOH7dswG80856O51zz4N85C
+        QJO5aOmbBa/6qdDWMvjflwBVyv6YAimGrWAjnLLlPXsFwSbfJtj1Pwn2HLRqOhuBzTMR5DcLbQJmIqTl
+        LPh69YW29r88ARIrkYddhbKlNsJ7tlDZCrAFyuZshFM2D/tDNqIMdgs52MEEu22LGQhpNR3tW09DaNBU
+        hLeZgo4hUxDQNBk62vr/ngQoL5AUVRTIqmArerZq2CqVrQS2X3VgB4pgB09BRNvJ6NhuIjq1n4CosPGI
+        jhiHuI7jEdyiO3R0/qEEyNqIFLYyz7Yk2DVUFEhF2GsUPJuH/WEbUaZslbD9ZWGHycCeRLAnorMIdkyH
+        sYiLHIOEqNHoEj0KXWMy0D0+A6FtukBX929IgGxH8mHPrj5sxQL5PwJbTtnKYEeFTeBgxyrAHolucSPR
+        PWE4enZJR3LXYUjploZ+PdPQKSwWerp6f3EC1MvoJ4O9QQG2qU4JAS8m4MUEfD2vbMN1FEVkJ0VUKAup
+        UBZQRyIL25Zg29XMI+CrCTi1ftT+SQokwebbv6UEfAk8nJTDbuKxgIBnw7fRfAJOsL2zyLfnIsBnDhVJ
+        gt1Mquw2ATPQtuU0tGs1lXx7igj2JPLtiYhkNhI6Hp3DRcruOBrxnUahS+cMJEaPRFLsCFK3LOw+3YcQ
+        8MHonzwIqb0HYlCfVAwdkIq4qE7Q0/sTCRAqmwE30y0jWJvIa7dQd1HOgeZgk7LrWpbC1bacYJUTrDIa
+        Woq59RGHWuvQwKmUoJUQtGKK9XRMPgebKZv12i4E29t9LYHLJ5B5nLIZbKbsBs6L6bHFpNoVaN18JUFd
+        TMcQaIGyW/jMJ+UuouKXiw4hC0m1CwloNkUWgcwm5c6jx2YitPVUAjydYM4m5c5GUlwmwZxF21OQGDMJ
+        yUnT0LvbVPTpMQV9e05Gv14TkZoyEQP7TMDgfuMxtP84pKWOpfsjMCB5MD3Gwx7SbwAB749hA/ti+KA+
+        GDGkN0YP642khAjo6+tWLwEqC6RI2R7OW5E54yI+O/II585+jz27vkX64GMEkFlJAYYPOYYvzjzFuS+e
+        4eL555g76zTsrJYjpfsunDn1GBfOPcWF8/T42SfYuukGEjpvpIQtJtWuwpQJh+l57+HyxSc4dvQeZkw+
+        QFAXk8IJYshqrF5xkp77Pr68/Aj7dl/DiKFlnIW09M2knwzgYhw6cBXXr36Ha1ce4sa171C54yyKCw/h
+        xvUH9Nq36VwXUxIyMC5jBS5fuo1bN+5TfIuvbt5H3oqNWJZbTNv38NWtb/A1xa0bd3DpwlW6fxe3v75H
+        cRd3KO7duYcd27YR8D4YlprCwc5IS8Ho9GSMHd4T40b2wIRR3TF5bHek9GgHA2UJkKpaBJxgi61EoUAa
+        rKfWrgSrl1/Db7/9jt9//x1v3/4A4A+8fv0eaYN2kvpzkbfyEu2T3o4cvg53p+kYNbwCv/zyG7fvp/c/
+        4ddff+XuHz54Hc2852DqhN149+5n2vMHfvzxPf744w/88MPPmDNrB1o1m4UtG8/Ta/5Br/0bfvrpJ+53
+        Hzx4jtQ+i8nDx5GVTCHF5uL+t0+5x8S3y5du4MD+z7n77979QOeRifZBKZg7cxXe03kIb+WlW1BUUMK9
+        tvjGXu/Vq5fc+5W/HT1yAH17RSN9UALGZ3TDpDHdCHhXTB2fiOkTu2Dm5ATMnpZA5xgEAwMdqOlpjCTY
+        GxWUrbxAUvsnaP2sjAvQ3Hsjrl97zr341at3MGnCCrx8+YbbLi05RiP3FOzccY3bfv36LXfS7LjGjYYi
+        Y3gJfvmZh15aUiGBcu/uI+oSxqFi+xlu++XL11iQvQYPHz7htg8f/IIu4em4c+cRt33t6i2UlGylBP6G
+        3wnU4kXFCPTrT6oeTRaRTQl4zB137943yJqbg/S0Mdi6ZSe3782btxg0YDiCW0YiKzOXSzS7nTt3Dpmz
+        MpHSKxmrV67iEsDOfdeuSsyYPgXTp07EyhVL8OQJ/9zPnj3F0iU5SBvaB3GdW9BV35GAx2PWlHgCHou5
+        M2KQNSsa8zM7Y2FWZwwb1BKGhpQAA+3hBHuDrLLFsLkpkmATcG5Nm+tGCiQFsq5FHtq02Ihv7r3iTuL4
+        MQKTOIpO5gW3XbnzOJo1SSPruc2d/IXzl7k3/OTJM4S3T6cErKYrgE9A7qJ8bCjdwd2/e+c+2rXphwP7
+        TnPbjx89Qf++o3Dzxm0OxKlT59E3ZTy+EyXk5MkzmDtnIT3XL9x2/toStGgWg47tB5H3zsaD+3yiTp48
+        Dc+GPmjk4YPNm7Zy+968eUPPPQBtWrXFgqxsvBcloKR4Peq7uaC5rxcK1vIJYMqfNHEsPNzt4dfUDQmx
+        7XDr5nXu+K9u3UDrVt4IaO6E7onNMWF0GObNisKCOVEEPBKL5nfE4uwOWJoTgZWLI+iqaw4jQ22oGesO
+        I3WzT2vkYLNuxFyuG5GbIB1rr6CBoxTffsMn4PPPz6FjxGBsKDmI3bs+x9TJZAUBqQT0EVnEz1iTV0oq
+        fkQ28iOSe06iBCyWJODWrTv47rsn3JvcsnknmvlEkXef4h578uQpunYZgIFU6MaMmoUe3QehS/wAPHrE
+        W8upU2cxf94iQQKK4N+0HRXYFIxKn46HD/gEPH36DBU7diJ73gLs3b2X28cSkNq/H8LaBmJxzlyyoB+5
+        /Xfu3KarZBOmThqOTeUFXAJYXLhwDhvL12HUiK4YNyqBxHeLO/7rr28iskMzdE3wIvhByJ4dhiULIrBs
+        UThWLA7DqiXtkbesHdasCEFhXggmjvWBkRElwNxwKCm7UEbZDLbMuC5q/SR9NlvTpm7EzX4JdRXr6BJ/
+        yZ3EqZMX0LB+POq7JMOjXlfY24QhPmYsXr18S575BmlDpuDqlVvc1TB54kKMyciRWNCLFy8pMT/Qca8x
+        fdp8sqgwqhX8FcASkDlzARbMX43chWswOmMa+iSn4/FjPgGnT58lixImoBAt/YKoF0/CxNGT6Er5jtvP
+        ALI6c/DAPrI7aQIGD+yDyPAArFiSSbWITwA7R5aMwrULsGXTGvpd3u/Z/hcvniF77iDMnpFAyf2K23/7
+        9k0ShR+GDfZBbnZbrF7Kw85f1RaFq9ugaE0w1ue3RnFBIMqLAzF9sieMjSkBNUwGE+y1SmG7CmBzQ42w
+        z66XC0/XHER3yKdLnLeckyfOIbrTUJRvOIy9e85SsVyPcaNXkfp/4WwnbcgksqPL3LF5q0sxYVw2fv6Z
+        h1aQX4xdlfu4+1e+vI5OEb3w2VFpAnZs30lAeHv48vJVjB01FU9ECThz+gwWLpBaUGFBAYJatUTPxHjM
+        mDQWj757yO2/dfMmMkakka93IXsUW9BrOq8UxEY1w5qVM+hc+QQcO3YYw9J6oxd1K2Wly7jkMfgbSvPp
+        +CSk9PTDjCmd6Iq+yR1/hxLQPakZxmZ4I295IMEOQgnBLi1qhbL1LbGxpAU2lQZgS5k/dmz2IzYeMDHW
+        glpti1QaalZ9ALZ4qOFX/nwbsjXtbIosahlX0xXwPXcSJz7/An1SxuL75/wVsX/vaSzKKec6JKY8ZjHi
+        Ile5cz+mTZEmYMniFSheX8bdf/DgIRLiUqjtPMltP3n8BKNHjcPNm/zlfuniJYwcnkEWxBfAM6dPY2HO
+        AkEC1lIN8Ue/5CgqfCOphjzg9p8+fQLNm3ogOLAhWeRmbh+fgB5IjPVCUf4USQJKS/Lh410LnTq4kCXy
+        CWD2OHXKMHoOc/To6oLsrI6UXFEC7tygZPlg8viGBN9fAntbuR+2b2qGHVuaYuc2X+za7oN9lT5YMK8e
+        TEwoATa1+tFAs1QC21MA20cAu7nXfJog59G4nkV9+FzqsWmKbJpJY3cuFSD+Er9+/SvMmb0Ub6jbYbey
+        DTtQsn4bd5+1iffufkMdDV8vLpy/RNCWcfvZbfmyVXT8Ju7+g/sPENM5ga6i/dz2q1evyGIW0Ju8w21f
+        OH8e/fv1xt27/Pb169fIlzdwgJhKFy2ch7AQHwxNjaDil0ZX0H3uuLNnTyEi1AfJ3QNw/DO+4P/003ts
+        21qMVSsm0gwyh7ZZGw1cvHgWK5bNoDkjHUcPreUsiD33gQPbkbdqCrXWPQh0FJ4+ucEdzxLQO6UxZk51
+        I/g+Eti7K5pg787G2L/LGwf2eOHgXk98drARlixygqmJJtQc6/Ym2Iu4cV0Km43rsrADm81Ga79Mflxn
+        ayMtp9O4Po06jenYvuU4d3IsWF/NbqzgpQ0djUqRrVy9eh3tQjqSssq5bQa5IL+I6//ZbfXKPGzayKvy
+        4cOHiIzoQMUyS2I7rD4wwOx26eIFxMdGYGfFZu412X5xIu/f/wYpyXFkYV4YMyKUfH0Qnj3lr4Bz504h
+        LtoXI4e1oqGPb0PFt8eP7qCyYgmdzzvRHv5288ZxnDi+jnsd8Y0uBpz8fDUNcxH03HwC7t29Sd2UF7Wy
+        zqjY6snBPkSwD+9vhKMHGuKzQw1w/LAHPj9aH6c/d8eq5XYwNaUEuDr0gl/j+fAXwW4pA3uWBLb8EmuH
+        dpNodGfrI+PQq+tkatU2khWcw6VLX2Lf3gMYlDoMvk1aUj3YjBs3bmHbth1o5huA+VkL6E3dJLs6Qapf
+        zqn5ypUvqbeeTjaUy7V1hw8dQHhoGyTEhCN/zVI65ix1H19Qgkqp0B8nxW6kBAVQVxSFzRvXklrPUN24
+        gL17KzBkcE+0auGCXt19aOgJoUKYTIX/MHn0VWzZso6sjbqUMf44dmQVdTBf0tVzgcRxgQp+BZYtGYVr
+        107SObB952i+uUBdUx61pNNp2j1PFnie23+NoqhwPObP9afpeht1gZdx+PAWSoA7FmU7kNrr4/gRHvaJ
+        z9xx6rgbQa+Hsydd8cUpF1z8whn5edYwM6MEeLh2Q5DfbBnY7Rjs1lMRJl71C+Fhs1W/zuHjEdOBrWmP
+        QUKn0TTqj0JMxyHUxiUhuFUH6oOD0cTLj3plb2oFAxEdGU8+2pmgBMK/mR9td6JBJQptgwIRFBiAjuEh
+        CA0JRKsAH7ofSF1Te4S286fHm1A/HUw+3h5JXYLRIaw5Hd+AEuODiDAfKvbeGNS/JYakBqJHtwB07uSD
+        9iH16fccqBVsQG1eAJbkhGDV0lDkzAvF0EH+iI1uQN5dD7On+2LVsmBMm9SCfrcRoqPq02Nu1Bq7Umvc
+        GAP6NaJEuSEuth61v87UJblSM+HJAU5McEFiFxc61g5TJtojb4UnZkxtQPbjiMGptbB2tR2OHXaRwD5/
+        2hkXzjoRdEdcPu+ALy/Y4/qXdlhfVIsSoAE1L49EUva0D8KOF8HuGp2BpNiR6B4/Aj26pKNX4jAkdx2K
+        pLi+6ByRQBNsBNoFt0fH0AgkxsRSJ5KILjFRZAkhiI8OR+/uMeiVFIm4qDaUiCB0jW+DLrGtkRgXiN49
+        2hLwtuiR2JJ8uhXSBrWjibIdUnr4I6pjIxre3BHWrh7at3WlpNZHzyRvesybkuZOV4QT7XOiZLkhfYgX
+        tYh+WJ7bCmtXtqI+3J+8mSxpZH3qXBpRl+JL/t0UuQsaYeI4Bt2RWmJHeowK61xXZE53woSxdhg/xpYg
+        21GxdcDihQ6Ym2lLc4E1RR3qYqxRkGePLRsdCLoNHVMbK5fVwZ6ddjh32kEC+8olO1y7bEvQbXDjSl3c
+        vFYXd25ZU2dlCXNzSkBT7ziCPRHRItixAtiJEtj8EiuDnZLElliHom/PIejfaxC36jewTyoG9elPP/sg
+        tXdPiu4Y3K870gf1xMihPTGC2rb0wV3ofheMHZGIcSMTyJ9jMXZkNPXpFGOiMDo9HAP7BhFMH5ooXdHE
+        2xauLjVhZ2uOOrWMYWmhT12DLgwNtKGnqwVdCj09aRgaaFFR00YNSz3UtTaAs5MxGjUwQ3BrKyroNhjQ
+        15HAuWP1ck9s2+iDSiqQ2zd5Y9MGT2wsbYjNZQ2wfXMD2u9BBbQ+Kra4kZfXw64drti3y5WKpwv273am
+        +0700xGH9jmQxTjgzAkHnDxGqj9ii5PHbUjpNgRcDNsaX123xtc36uD2zdq481Ut3P3aCg/uWVHizPgE
+        BDTtjMTOo7lPasTKFsLuLYHNllgHcbAHsyXW/v0xLLUfQe6LEYN7I2MoTZ3DkjFmeC+MG9ED4zO6E1y2
+        EJWEqeO7YtqELtSTJ3BrI5nT4jB3RiyyZkZTEtqTnXihoUcdWJgbQEdHE+rqalBT+2tDR0edkqiNxl5G
+        ZB+k1qWuOLCbiuNBFg3INsizj/CeffIY79lnTvA2ck5gI5fOiZR90Q5XJcq2wc2rdXFLDPuWGHYtfHPb
+        Ct/eqYn7d2sQeEs8/NYCT76zwI5txvR+1aEW1KIjWUi6ath9edhpHOw+irBHKoE9MVECezbBniOCzRai
+        srm1kU6YNyscifGesLUxhZYWKUEJtP+p0NRUo6tEG31TapDCnXH2hLRAysAW24gQNoFmNiKv7HsE+548
+        7G8s8d19Czx6YI7HD80JvBmePjLFi2em2FVhCAsLSkD74DAVsJmy+yiB3UMKexxTtjLYMRxsthCVQ7AX
+        zYvE4uyOVBQjsHxROI3q7RBJA46+Pg0iSgD9XaGtrU7nYUT2YkegVSibYEuULbARBWWrgP3ssQmePzHB
+        90+N8YLi5TMjvH1lhL279fgEdAgNwXBlsEf0lIXN2YgUNrOROdOlsJmypbA7cLCXLQzHily2EBWK1cva
+        U0vYjlsbGTKwIb8SqATK3x0sCelpJuTbBFpB2bU52Pdu18Q3KmGbKYf9jIf96rkhXn1viNcvDPDmpQHe
+        vtTH+3f6OLBPhyyREhAdGYTxIxlsgY3IKVsp7LmyyuZW/Qj2SjHs5SHIX9kWBaKFqHVrg1BS2Jq2WyDA
+        r4ZSGP9UNPDQwvGjNUjVcp79TQ3ybFWwTXnYT6TKfvWcQg7221f6ePdaDz+84ePHt7r45b0uDh/QhqUl
+        vX6X2JaYLvDszKli2FLPFsPOlVM2D5tf9VsrB7u4oDVKiwKxYR0NY8X8QtTWcn/qm5vAxdmQK7TGxpo0
+        DVL3IgozLjT5oCFFPszFYa4JA31SD8FjxdWc+mnWUYjDQhgWsmEpDkt1zgK0tdW4n9u3mBBkgk1FsjrK
+        fikPm0ALYf/4lof9/h0LHfz0Ax8//6iN33/RxtFDWnwCenT1o4LIlB0tp2wGu4McbF7ZQtjrVcBmC1Fb
+        uYWo5tixuRl2bm2K3Tt86fcawMFeDzZ1dZA5w4EGIlcKZ2oPnSk5TlizypH6ageuxy5cY4eifDusK7DF
+        +kIbFBfVRek66qFLrNGrpzGXxOAgXWwotsLmctba1cTWTTWxbXMNAmqJHVstULHNAju3m6NyhzkVXDMq
+        fmbYXWmKvbtM6DFjtA7UovZWjX7fgNQsULbAs18qsRFZZeuKYOsowGbxy3sWWvj1Jz7wmxaOHtHkE9C7
+        ly+WLBDZiBLYQhsRwi5b14qHXRKAzRsUYVdu9yXgTWgwaUy9sze1fF44vM8TJUVucHTQpR5fF1vKXWhM
+        96Bwp5bPjTqRejh3yhXnz7hQJ+JMLZ8TDTSOVBgdcPWSPfm0PRVGO/JpWxqgTKBBCYiP1aNCWYe6kDpk
+        H7XJPmqRfbBeuybZRw2yjxqcsp88tMDT78zx7JE5nj82I8Cm9LgJzQiUAGM1SpoeARYq27BKG3kvAq4c
+        trYENhc/a+G3nzUlgd81KQHsKqQEpPZj69dyys6T2khJIVO2CDYpWwx7mxD2NgHsSm8aVLxwcI8nDSuN
+        cIQtRIn67BOf1cemMic4Oeqgnqs2DTr21Pbxrd/5M0r67EuCCVLQZ9+l4jh5ghGXgIR4XSqYNXD/nqBA
+        Mhu5TzZCVqLSswn0oweGiInW5K6Aim26BJe3EgXYSmxEFezf5GD//otisAR8Jk5A2uCGKM4PVmojirB9
+        CbaPDGymbAb7sBxsZUMNg71jqy2cnbXhVk+bbKAugZaHLTfUsG7kFt/6ifvsh1Qcp00xgIaGGhK76ODb
+        u3KtH8Vz8m1hgZTxbIq3rwwoKXqIi9HgElBZwaD+OWUrg60s+CtAZEEj090JdAsF2BWcsgWwyUY4ZbMl
+        1mrAlgw1AmUz2HsqreHiogV3dy3qBGqRnbD2TzVsmdZPpGxmJTOn63EJSOqqTUr+QIGU2Ii+RNlM1S+e
+        6SA+jk/A7koGkweuHLYU9MfAFgd/ZfCB36gIHxYlYNxoFwIt59liGyHYYhs5+qnjOqdsW07ZDPah/VZk
+        P5qoX19T0vqphM26EbGNfCe1kZcEevYsXS4B3btp0X7yaxHsN6o8W85GfiHQr19ok4WpcwnYu1sTf/zK
+        w66OjaiK31gIYP/6E0ukKLjE6tBxOjhySNSGTp7gSBbiLQP7Y5Wt6NnKbKQ2B/vYEQuyH03qvTXp+cxJ
+        0QLPZjZC7Z/ERgSe/UKg7LevDDF3jjaXgB7dNWn/x3s2g/P2lZYkAfv2aJAylUNVFb/9IgWtDDiDzeLn
+        H1no0rmw0KNE6OHQARrEqBVWmznNlvvw4HgVsKsukMph32XrI6RsNkF+yymbuhGCfepzU7i7aaBhAw2c
+        P2vMdSRVwRZ3I5yViGzk/Ts9zMvS4hLQs4cGPaYatrD948FLVf3utSa6JPAJ2L+XEkDeLA9ZGDKgFWDz
+        wGVhMyEwu2PCYPZH8dqAtg1xYK8ePwnPnWWNL9hC1MkPweZtpKoCKYSt0I2Qsp+ThXxxxoj8XwONGmrg
+        8gXWX8vBFvu2nGczZfPq5lWVPV+TS0ByTw06TgxBOWwhdHH88WvVCRDC5oB/Cmzqqt4RcHbFvn3JhGRE
+        79EY716ZUAMiWozLzrIi0I4C2HbVhn3/bk1F2GIbYZ4tp+zXBPvieX3yf3V4NlLH9SvikxSfMDt5vkCy
+        4BXNh1jRDACbJHOy+QSkJKvjx3eycMXBIKsKZjc/vJEmYN8e2ieqAR8L+0c52G8EsF99z1peVrdMiIEp
+        sTCjbRoMK4z5BOTmWFIXogq2vI1U0Wcz2KLWj+9IFLsRdvlduaQLD0pAw4bquHReh47TpeMpqCNhXcmL
+        59r0exTfi0MLr16I4iULTbwh5WbN0RDVAHU8e0r7XmnidbVCC6/ped7Qz8ePtBAbIy3CrDiqhM0tLYiF
+        olzZUtimEtjPKZ49Zp0b+xzAkgRag3jRpL7VjFsqUVu22IymSEXPZoONMhuRKFslbHZCwm6EVzYL9mau
+        X9Hh4BsZqSEoSAMR4RoIDxNFuLpMRKiKCHV4eKhxSxE2NmoIC1VyTDUilH6vdm01mJmpUXtMiqfiWF0b
+        YbBfySn7+ROatBnsR2LYltTJsWmczS5sOq9FrlGL7tfBlnLRR5KrlptwI3t1YFenQP4gWYySera4QLJL
+        +uY1LTQi+5FfkfwngyWgsoKd44eULYQtUvYHYH97h3V/NL1/bU2uUpfcxYbEbouyklrcIqLa2tWGBFke
+        NnshRdjClb8Pwf7pB8Vu5Hdq2766ocn5vzIQ/1SwBFRs06P3xOrUpyqbrUMJYH/Fw/76hi3NP3YkPLaO
+        xb4R4YCbV5ywvrAut8KrVpivT5D/nLKr2/r9QYXv61sa8PRUDuKfCjMzdWzbbEDgP17Z9xRg21I9FcN2
+        xLXLTrh60YmaHGdcPse+E+RKP92Qv9qOW3ZXW1+oS23Rp8OWBS0OUesn15WwzuNfmQBTdWwqMyYHYCun
+        HwPbjhoYIWy2cstguxBkV4JdDxfOuuH8aTeaqerj7AkPmrEa0M9GWLnMGdw340rWa4uKzqcrWxlsZcEn
+        gCzoX5YAU0rAhhIzqoFSG1EO245gO3A2IoVNyj7PYLsS7HoKsE8da0gDbiN8fsQTxw574bOD3jh2qAkW
+        L3SDKfty7oYSLQJbHdiywJUBVhXiK4OttXx1U+tfVwNYAtYXWhJ0edi8Z8vC5m1ECtu9SthHDjTG4X1N
+        cGivLw7sbop9lc2wf5cfFmQ1oPaXElC+gQckC1sK+lNhi4N/TtEA9bM2zRra/7ouyMREHflrrMi7hTbC
+        w76koGz25VqCfbwhTopgH2ewD3njqBzs/buaYe/O5thd4Ydd2/2xc2sAKja3xM4tgZgz05v/A42NZRqc
+        Mj8NtixwMWgW/FXEriw+2AzAPoy+cVUHjWgOUAbinwoTEw2sWm5N0JlnK1G2GPbRasDeIYbdAhVbWmL7
+        plbYWh6ILWWtsak0COXFbbCxJATTJjWFMfsTJZaA6qwCCkFXB7ZkghQNNWxcf//OAFcv63GDmDIQ/1QY
+        G2tgWa4dvjjJ24gYtthGONj7GWwfFbBJ2UpgbyTYZevborQoBCUF7bB+bSiK1oRh3ZoITBjtT8OojvIE
+        /BWwxRPkOzbUcOsj7AtJxrh8wYBbCWVvnH1DzaqmOmxtNWBoKE2KkZE67O00ZcKOha2WJGyFYSMNGxtt
+        heC6DdFzs+8B1bLSptfVhpYW/5rs2xkLs51w/EhjBWUzz2aw90hspAV2kI0w2NsY7A0MdrAS2O0JdBgK
+        V4cjf2UE1izviLxlkVi1pBNFZ2SkB/J/piq1oE+EzY3sirDZB9ySoYaCfR3vJfXZbAm6gQefgKhIHezc
+        borPPzPH/LlGsKnL7+8UqYfjR2vSfiv6WYuUWJsu+zo4erAOFTVrHNpfFwf32eDAXlvs322LfbvssLfS
+        Hnt2OmBXhSMqtzth5zb2hxIuNGC5ondyTW7ZwtBQA8k9rFC0lvXhbkhMsIKergYlXBPzZtfDwT2KsJln
+        c7A3ipUdzNmIDOx8OdgrpLBX5EZh+aJoLM2JweLsWCyaF4/ceV2QNrAtDA10+SLMVhfFn9ZIgItg/ySA
+        LVwbUQmbTZAE+/unskMNW4x6+sgSZ06awd2dV/W+3Wzpg62N1KYOpA7ShhhxCWjUSBsjhptgJMWIdFMu
+        hg8zQ3oaxVBzDKNIG2KBoYNZWGLIIIqBNTA4tQYGpdbEwAFWGNjfCqn9a3Hh72fMPW+rFqaUFG9SeFNS
+        eDOUlzSBt5cJDAw0MWuaByq3yduIEmUTbGYjYthrq4Qdh4VZCVgwpwvmZyZi3syumDujG0UPDOgdRq9L
+        CSgrJdVTcZSH/WFl8+sjymCzb/8+EU6Q39JQQ4PNw29qkaprcJ+IeXlq4cyJWrj7Fd/63bllh5nTzKFN
+        tqCrqw5LS/aZKQv2BSYKC2lYyIe5tiTMlYS+Pm9BkR1qEWR/Cr5Ass/CgwJrwoAenzLBC5tLedgbBDYi
+        gb2KKbuDHOzOEti5CrCTONizp3XHrCk9MHNSL0yfkIyp41MwdVxfJHeLpNfVg1ppMVnLu+rbiCJsuXH9
+        25ocbPkJ8i4NNQz2kQO1KQHsy1DqyJlvSW2fA/XbTmQxdggLNeRAhbQ1xqYNDthc5oSNpc6kVGeUFbtg
+        w3pXlKyrh+JCN6wvcMe6tfVRuMYDBXkNyFIaYs3KRtxfrKxe5oWVS72xYkljiiaIjbbhntfZyQg583xI
+        3cGk7jbInO7L/S2Bgb4Wxmb4kLrDlcNeLKtsRdi8sqWwe0pgTxnbG5NG98WEUf0wbmR/jB2eijHDByEp
+        Lgb67N/VFBexRSgjvBHD/r5q2LLKZh/I1FIK+/Yt6dqIeKhhffa+3TbcV1IYEFY0U3qRxQyzRHCQIfc1
+        Q7bfy1Mfo0fWxuiMOhg10hoZI6zJjupiZLoNHWuD4Wm2ZEV2GDbEDmmD7cmGHMiCHDB4IPszISeyH2cu
+        Uvu5ULjCvzlfA1jUczVFQqwzJcUZTo4m3OsZGJDlpfkR8KhPgC1V9mQx7Awp7NHDBiJj6CCMGDIYwwcN
+        xbDUNIrhiO2UAD09fagVFRgQdFnYzzjPVgJbhbLvcLDZtx542DcFE6RkIYqGGjay79zuCFcXqv70xlmI
+        wYi3/46Qfz19fW0MGdCSgMd/WNkT5ZT9AdhD+w/DkH7pGNRnBFJTRqJ/rwyKMYgM7UYNACUgf40RQedt
+        5DHBfiRRtnLYbG3kdjVgSybIM244x4aak2yKbEBdizup2BrtQsw4rxeCEIeToyES4upS2CA+liLGFnHR
+        tojtbMdFTJQ9ojvZo3OkA3VSjujU0ZH83QmREc7oGO6MDmEuXISHulLUg7sbfwXIvw53RbjURmiIJ8aM
+        iERWNWxkvBzskVXAHpCcgX49R6FP9zFISRqL5MRx6NllPHomTEL7oGTo6hhALW+lKb6jInmfrEQWNv8B
+        gkplX3LCFQHsi3Kwz3zOvvPZgIaahjghmiCPiSbIY4d8sHC+q0x/Loz2IbWxbRPrSAKxlbqRzRtoqClp
+        g3JWINeFoLSwHYoLqPVbG4aivHAUkGezbmTN8kisXtoJKzkb6YxlC2PISuIoYV4EWzHZGhrqlLSmBJxs
+        RF7ZHwublK0Mdo/4iegWOwldYyZz/30rodNUipkICuhHlksJWLHUAvduK7GRq6phyytbCFt+XD8iniD3
+        +EomyH2V/sjKrM8vRslBYdE22JpAt+FglzDY4j5bAltaIMWwmWcvWUCePZ95djxnI9mzE8lKkhAZ3kRl
+        AsJC/DFxdH8VsIdwsNMGiGEPV1B2bwa7qyrY0xAfOR2xHWYgOnwmokJnoVP7THRql4UA34HQ0aamY8mi
+        mvjqGnUiHwVbdm1ErGzJuL5HOq6Lh5rKbeJxvSVNkq0xY4on/88q5KCwCAq0IdBhVcLmCqQANufZs6Se
+        nclsZHIvspIUgtxMZQLatm5FwIdIYFelbCHs7vETJLATRbDjOkphdw5jsGejY8gcdGg7F+HBWQgLmof2
+        gfPRrlUOfD3TqOWmBOTMr40rFwk2+wBBpbIVF6Jkld2UJlEBbNHayA6CzY3r4rURshHWZ5cXt8OkcT4w
+        VpGAlgH2WJ7bSapsOdjZKmAzG5kmZyMTMgYQZH/lCVDXQKB/MAb3HYGBAmX3rULZEtiR06oHu2U22rbI
+        QRv/hQjyW4TWzXIR2HQpPN1H8AmYN8eGgHtU6dlVwuaUza+PSMd1gWezoYZsRDKuk40U5XXA6BHNYaji
+        78T8mzkiZ248cqoLe4zQswfwNpLG28iIwUMRGNBSaQLUKQF+viHo021cFbCnytgIDzsTke2ksEMlymaw
+        F8jAbtV0MVr6LEFAk6Xw916G5l7L0dxzFeo7jYaWJk3+mTPsCbgi7IPysHcIYDNlE2yuQHKwg5XADuVg
+        s6FGYiOiArkiNxqTx4WgVQtnNPVxRNMmjvBt4gTfxk5o4uWEuM7+mD21GzKnSmFLCuSYPiphSzxbYCMD
+        e2cgIiQOrk6ecHHkw9nBC072LBqjTcvuSIqZIoEdpwCbKXu2EhuRhR2oAnazRivg23AlfDxWoUn91fB2
+        W0NRAGfb8dBkCZg2yZmAiz27GQd7twA282wJbK4bCZaO68ICSROk1LM7SmDzNhItUyCZsplnz52RSKpO
+        IlV3I9DdCXQPUnUvGtWTVSg7FaPkYQsKpKyNjJbaSAJ5dtx4Aj0BidETkRA1mVQ9BbEdpyKmw3RERygq
+        O0IZ7ICqlc1gNxXCds+DV7018HTNR0PnfDRwKoCHYyHqOxTDvvZkaGoYQ23CWDeyElllMxsRK7tsPXUj
+        MrB5ZcsUyCpgi7sRsY3MkdhIT8wQ28g4HvZEOdgKypbA/kjPjpJ2IzFKYH/Is6sF200Me60MbHf7IrjZ
+        rUM92/VwtSmGs3UJnOuUwdpiGp+A0SMbEHBFGxHCVmYjqpQt9GwONmcj/AQp9Ww5G0n/GGUrgR0nhM1s
+        RL5AZla7QP4Z2PXlYLvULYFTnVI41t4Ah1plsLcqg13NctjW2Awrk5nUBFAChg/1QklBqFLYMkNNdZQt
+        gj1jYi+BsvvIKjt9oCzsgaph92E20k0Im1q/uIlyBVIKO0qZslt/vI3IerYAtkt1YW+QwrbcCBuLTahr
+        vgnWZptRx3QLaptsh4XBbD4Bgwf4EHB52LJDTc5cIewkOWWLYIuUPXFU3+oru7cQNilbCewkgbJ52NOV
+        2khEG3nPJmWrgt34Q579YdjOHOxSWdg1lMHeilrGW2FltA01DbejhsF2WBpUwkQ3i7owE6j1S/EjK6ke
+        bEVlS2GPkYOdLq9sAWyuQIpg95LAniSB3YWDLfJsmdaP70YUYTNl5xDshZ9QIOVsxEEVbDllS2Bvrhq2
+        /g5Y6FfAXI9CdyfMdCphqr0Hhprzoa5GCejVrSU3rmd9BGwFZX80bKmN8LBlPTsqtKpupAply8Nu8BfB
+        Vmoj8rB3qIBNatfeBWMtCs3dMNJgsQ/66gv4BCTFB9G4LuxG/mply9sIUzbZiIyylRRIec9u/gmwhTai
+        EjazEWGBJNiWymBvU4TNQOvtlIXNQMvAZkGKVxfGfmkC4qLaceO6AuzBqmH3l8AeI4WdoMqzlbd+yvts
+        1Tbi97Gw7avp2UphC5RNYUnAmbI54HKwOeAMtgi4oQJsZSFIQKfwcG5cTx84VAJ78Idgy3m2MthRSjw7
+        VAQ7RAJboGxfaYHkYHvKwm7MYNMUyWA3+qCySz6xQEptRAE22YgEtkjZhiyUAv5QCBIQ1jaS1C1vIyqU
+        HS3r2RLYnGeLYIuUHdpaibLlbaQasD+obOtSOBFsRxnY5SJlf6BAipStzLPlla1oI38mBAlo0yoaKUnj
+        JbC7i5VNsCXK7kgFsirYypRNNhJYDWVzNiJUtvMn2gipWwp7i0obkcLeqaJAVtdG/kwIEtCqeQK6Rk9V
+        Clva+s1RCTtYZCPVga1gIwLY7iqU/dGerbL1k/NsEey/VtnVDUECmjdJovYvU67Pnqu0QIphiz27xd8B
+        W0bZqm1E6tlSZX9agfw7QpCAJg17Uvs3X4myec8WK/uvg00ju1LYG3nY5NvVh62qQNKb/NfAVhaCBDR0
+        641g/1yCvajasNmathh2w2ooW2mBFMM2q26BVFS2DHClb/TfGoIEuDv1Q0Dj5YqwPT4NtqyyBbDlCyQN
+        NjWNqiiQnLoVPfvfrezqhiABzrYD4eORp2AjHw9b4NliG6GQwGbKFsCW8WyCrbz1+9Q++98eggTY1R5C
+        sAtlYLtJYPMfIHywQDIbMSUbISuRh22pxLOFyv7fayN/JgQJsK4xjGCXyBRIRc+WL5CCPlvORuSVLWMj
+        HOw9/5/BVhaCBFiZjYCDVblA2QLYXIEk2GJlC2DLKpsvkP8pu7ohSICF0SiCvUVkI6oLpIyN/KfsPxmC
+        BJjqjSXYFQSbVG1QQcreSbDZEmulCDaB1t5NsJmq93Ahga2xl57sv/j4YAnI4ROgo+kHfa046GnFQk8z
+        FrqacdDV4ENHI54PdT60xaH2X/y56AIttTZQU9N9rEa3EorN/8XfHqVqamr9/x+f+hkxPMYLqwAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAABMLAAATCwAAAAAAAAAA
